feat: hero section in progress

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,8 @@
 }
 
 @theme inline {
+  --font-sans: var(--font-source-sans-3);
+  --font-heading: var(--font-sora);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -47,6 +49,8 @@
 }
 
 :root {
+  --font-heading: var(--font-sora);
+  --font-sans: var(--font-source-sans-3);
   --radius: 0.625rem;
   --background: oklch(0.9642 0 0);
   --foreground: oklch(0.141 0.005 285.823);
