--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -15,6 +15,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --color-carousel: var(--carousel);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -52,6 +53,7 @@
   --font-heading: var(--font-sora);
   --font-sans: var(--font-source-sans-3);
   --radius: 0.625rem;
+  --carousel: oklch(0.2672 0.0473 251.06);
   --background: oklch(0.9642 0 0);
   --foreground: oklch(0.141 0.005 285.823);
   --card: oklch(1 0 0);
